--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
-<body class="toggleUnChecked">
-  <div class="bg"></div>
-  <div class="bg bg2"></div>
-  <div class="bg bg3"></div>
+<body>
   <app-root></app-root>
 </body>
 
